--- a/MBK/Info.plist
+++ b/MBK/Info.plist
@@ -46,5 +46,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>rockoflf.ttf</string>
+		<string>SukhumvitSet.ttc</string>
+	</array>
 </dict>
 </plist>
